[gd_scene load_steps=26 format=3 uid="uid://d1r2dwh600cam"]

[ext_resource type="Script" uid="uid://b423nh08n8n7s" path="res://scripts/game_scene.gd" id="1_po0ka"]
[ext_resource type="Texture2D" uid="uid://ciy17e11hsa45" path="res://background_images/blank_map.png" id="2_po0ka"]
[ext_resource type="Script" uid="uid://dbotvyc6557a4" path="res://scripts/ledger_manager.gd" id="3_mixcd"]
[ext_resource type="Shader" uid="uid://dq8ika0127r0u" path="res://shaders/side_panel.gdshader" id="3_mj2jn"]
[ext_resource type="Script" uid="uid://dpyelxgx1eew2" path="res://scripts/pin_manager.gd" id="4_mj2jn"]
[ext_resource type="Script" uid="uid://bqyrkqgeqeen8" path="res://scripts/info_popup.gd" id="6_kdryc"]
[ext_resource type="Theme" uid="uid://b8gb88bprbuf2" path="res://main_theme.tres" id="6_tcjrq"]
[ext_resource type="Script" uid="uid://dguaa8uarvjss" path="res://scripts/grid_overlay.gd" id="7_6e45b"]
[ext_resource type="PackedScene" uid="uid://fy5xvtergi3a" path="res://scenes/vertical_menu.tscn" id="8_e35lh"]
[ext_resource type="Script" uid="uid://bqpydbv16hqws" path="res://scripts/quest_manager.gd" id="9_udeyl"]
[ext_resource type="Script" uid="uid://cwc3qlcvdaouq" path="res://scripts/instructions_popup.gd" id="10_miq82"]
[ext_resource type="AudioStream" uid="uid://bq8sot0oalxc1" path="res://sounds/pin_pop.wav" id="12_rvs2r"]
[ext_resource type="AudioStream" uid="uid://dno0iubhgq47l" path="res://sounds/button_pop.wav" id="13_5ay1a"]
[ext_resource type="AudioStream" uid="uid://ds24umvthgo1d" path="res://sounds/success.mp3" id="13_tqxxy"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kdryc"]
shader = ExtResource("3_mj2jn")
shader_parameter/solid_color = Color(0.901961, 0.941176, 0.972549, 1)
shader_parameter/gradient_start = 0.0
shader_parameter/gradient_end = 0.0

[sub_resource type="CanvasTexture" id="CanvasTexture_6e45b"]

[sub_resource type="Animation" id="Animation_kdryc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLayer/InfoPopup:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopupLayer/InfoPopup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PopupLayer/InstructionsPopup:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_6e45b"]
resource_name = "popout_info"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLayer/InfoPopup:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, -0.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopupLayer/InfoPopup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(-0.5),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_miq82"]
resource_name = "popup_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLayer/InstructionsPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mj2jn"]
resource_name = "popup_info"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLayer/InfoPopup:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 0.5),
"update": 0,
"values": [Vector2(0, 0), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopupLayer/InfoPopup:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(-2),
"update": 0,
"values": [Color(0.50097, 0.683024, 1, 1)]
}

[sub_resource type="Animation" id="Animation_j5hk1"]
resource_name = "popup_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupLayer/InstructionsPopup:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6e45b"]
_data = {
&"RESET": SubResource("Animation_kdryc"),
&"popout_info": SubResource("Animation_6e45b"),
&"popup_in": SubResource("Animation_miq82"),
&"popup_info": SubResource("Animation_mj2jn"),
&"popup_out": SubResource("Animation_j5hk1")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_udeyl"]
bg_color = Color(0.360784, 0.780392, 0.6, 1)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_miq82"]
bg_color = Color(0.441095, 0.630238, 0.7289, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kdryc"]

[node name="GameScene" type="Node2D"]
script = ExtResource("1_po0ka")
metadata/_edit_horizontal_guides_ = [360.0]

[node name="PinsContainer" type="Node2D" parent="."]
z_index = 1
position = Vector2(-6, 3)

[node name="GameScene" type="Node2D" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="GameScene"]
layer = -1

[node name="MapBackground" type="TextureRect" parent="GameScene/CanvasLayer"]
z_index = -1
offset_left = 3.0
offset_top = 1.0
offset_right = 4598.0
offset_bottom = 3202.0
scale = Vector2(0.22, 0.22)
texture = ExtResource("2_po0ka")

[node name="SidePanel" type="TextureRect" parent="GameScene/CanvasLayer"]
modulate = Color(0.960865, 0.937108, 0.968803, 1)
material = SubResource("ShaderMaterial_kdryc")
offset_left = 940.0
offset_top = 1.0
offset_right = 1152.0
offset_bottom = 705.0
texture = SubResource("CanvasTexture_6e45b")

[node name="HoverLabel" type="Label" parent="."]
offset_top = -11.0
offset_right = 40.0
offset_bottom = 12.0

[node name="LedgerPanel" type="Control" parent="."]
z_index = 2
layout_mode = 3
anchors_preset = 0
offset_left = 4.0
offset_top = 165.0
offset_right = 209.0
offset_bottom = 537.0
theme = ExtResource("6_tcjrq")

[node name="LedgerHeaderVBox" type="VBoxContainer" parent="LedgerPanel"]
layout_mode = 0
offset_left = -1.0
offset_top = -13.0
offset_right = 154.0
offset_bottom = 67.0

[node name="OverallDistanceLabel" type="Label" parent="LedgerPanel/LedgerHeaderVBox"]
layout_mode = 2

[node name="OverallCostLabel" type="Label" parent="LedgerPanel/LedgerHeaderVBox"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="LedgerPanel/LedgerHeaderVBox"]
layout_mode = 2

[node name="LedgerScrollContainer" type="ScrollContainer" parent="LedgerPanel"]
layout_mode = 0
offset_left = 3.0
offset_top = 58.0
offset_right = 221.0
offset_bottom = 328.0

[node name="LedgerEntriesVBox" type="VBoxContainer" parent="LedgerPanel/LedgerScrollContainer"]
layout_mode = 2
theme_override_constants/separation = -1

[node name="LedgerManager" type="Node2D" parent="LedgerPanel"]
script = ExtResource("3_mixcd")

[node name="PinManager" type="Node2D" parent="."]
script = ExtResource("4_mj2jn")

[node name="MenuButtons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("6_tcjrq")

[node name="HBoxContainer" type="HBoxContainer" parent="MenuButtons"]
layout_mode = 0
offset_left = 952.0
offset_top = 9.0
offset_right = 1141.0
offset_bottom = 110.0
theme_override_constants/separation = 10

[node name="LeftColumn" type="VBoxContainer" parent="MenuButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="BackButton" type="Button" parent="MenuButtons/HBoxContainer/LeftColumn"]
layout_mode = 2
text = "Back"

[node name="FamilyButton" type="Button" parent="MenuButtons/HBoxContainer/LeftColumn"]
layout_mode = 2
text = "Family"

[node name="InstructionsButton" type="Button" parent="MenuButtons/HBoxContainer/LeftColumn"]
layout_mode = 2
text = "Info"

[node name="NewTripButton" type="Button" parent="MenuButtons/HBoxContainer/LeftColumn"]
layout_mode = 2
text = "New Trip"

[node name="RightColumn" type="VBoxContainer" parent="MenuButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ClearAllButton" type="Button" parent="MenuButtons/HBoxContainer/RightColumn"]
layout_mode = 2
text = "Clear All"

[node name="ReverseButton" type="Button" parent="MenuButtons/HBoxContainer/RightColumn"]
layout_mode = 2
text = "Reverse"

[node name="LoadMaxPathButton" type="Button" parent="MenuButtons/HBoxContainer/RightColumn"]
layout_mode = 2
text = "Load Max"

[node name="InfoButton" type="Button" parent="MenuButtons/HBoxContainer/RightColumn"]
layout_mode = 2
text = "Stats"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_6e45b")
}

[node name="GridOverlay" type="Node2D" parent="."]
script = ExtResource("7_6e45b")

[node name="VerticalMenu" parent="." instance=ExtResource("8_e35lh")]
custom_minimum_size = Vector2(0, 0)
offset_left = 955.0
offset_top = 155.0
offset_right = 1149.0
offset_bottom = 213.0
size_flags_horizontal = 1

[node name="QuestManager" type="Node" parent="."]
script = ExtResource("9_udeyl")

[node name="ScoreTracker" type="VBoxContainer" parent="."]
offset_left = 8.0
offset_top = 567.0
offset_right = 198.0
offset_bottom = 710.0
theme = ExtResource("6_tcjrq")
theme_override_constants/separation = -1

[node name="CurrentDifficultyLabel" type="Label" parent="ScoreTracker"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Current Difficulty: 3"

[node name="QuestScoreLabel" type="Label" parent="ScoreTracker"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Quest Score: 0"

[node name="FamilyScoreLabel" type="Label" parent="ScoreTracker"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Family Score: 0"

[node name="ScoreValueLabel" type="Label" parent="ScoreTracker"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Total Score: 0"

[node name="MaxValueLabel" type="Label" parent="ScoreTracker"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Max Score: 0"

[node name="DetailedInfoBox" type="PanelContainer" parent="."]
z_index = 3
offset_left = -41.0
offset_top = 4.0
offset_right = -1.0
offset_bottom = 189.0
theme = ExtResource("6_tcjrq")
theme_override_styles/panel = SubResource("StyleBoxFlat_udeyl")

[node name="VBoxContainer" type="VBoxContainer" parent="DetailedInfoBox"]
layout_mode = 2

[node name="CityNameLabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="CountryLabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="LatLabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="LonLabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="PopulationLabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="CapitalLabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="EULabel" type="Label" parent="DetailedInfoBox/VBoxContainer"]
layout_mode = 2

[node name="HoverTimer" type="Timer" parent="."]

[node name="CenterContainer" type="CenterContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="GridToggleButton" type="CheckButton" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 9.0
offset_top = 10.0
offset_right = 93.0
offset_bottom = 41.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "Grid"

[node name="SoundToggleButton" type="CheckButton" parent="."]
modulate = Color(0, 0, 0, 1)
offset_left = 3.0
offset_top = 39.0
offset_right = 94.0
offset_bottom = 67.0
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
button_pressed = true
text = "Sound"

[node name="PopupLayer" type="CanvasLayer" parent="."]

[node name="DifficultyPrompt" type="PanelContainer" parent="PopupLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -195.0
offset_top = -43.0
offset_right = 148.0
offset_bottom = 48.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("6_tcjrq")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLayer/DifficultyPrompt"]
layout_mode = 2

[node name="Label" type="Label" parent="PopupLayer/DifficultyPrompt/VBoxContainer"]
layout_mode = 2
text = "Looks like you're done here!
How hard would you like the next trip to be?"

[node name="HBoxContainer" type="HBoxContainer" parent="PopupLayer/DifficultyPrompt/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="EasierButton" type="Button" parent="PopupLayer/DifficultyPrompt/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Easier"

[node name="SameButton" type="Button" parent="PopupLayer/DifficultyPrompt/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Same"

[node name="HarderButton" type="Button" parent="PopupLayer/DifficultyPrompt/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Harder"

[node name="ReturnButton" type="Button" parent="PopupLayer/DifficultyPrompt/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Return"

[node name="InstructionsPopup" type="PanelContainer" parent="PopupLayer"]
visible = false
offset_left = 178.0
offset_top = 261.0
offset_right = 940.0
offset_bottom = 565.0
theme = ExtResource("6_tcjrq")
theme_override_styles/panel = SubResource("StyleBoxFlat_miq82")
script = ExtResource("10_miq82")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLayer/InstructionsPopup"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="PopupLayer/InstructionsPopup/VBoxContainer"]
layout_mode = 2

[node name="Control" type="Control" parent="PopupLayer/InstructionsPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="PopupLayer/InstructionsPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="InstructionsText" type="RichTextLabel" parent="PopupLayer/InstructionsPopup/VBoxContainer"]
z_index = 10
clip_contents = false
custom_minimum_size = Vector2(160, 250)
layout_mode = 2
bbcode_enabled = true

[node name="InfoPopup" type="PanelContainer" parent="PopupLayer"]
z_index = 20
offset_left = 70.0
offset_top = 222.0
offset_right = 1082.0
offset_bottom = 569.0
mouse_filter = 1
theme = ExtResource("6_tcjrq")
theme_override_styles/panel = SubResource("StyleBoxFlat_kdryc")
script = ExtResource("6_kdryc")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLayer/InfoPopup"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="HBoxContainer" type="HBoxContainer" parent="PopupLayer/InfoPopup/VBoxContainer"]
layout_mode = 2

[node name="ViewToggleButton" type="CheckButton" parent="PopupLayer/InfoPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Dropped Pins Only"

[node name="LatLonLabel" type="Label" parent="PopupLayer/InfoPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="PopupLayer/InfoPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Close"
alignment = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PopupLayer/InfoPopup/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="InfoGrid" type="GridContainer" parent="PopupLayer/InfoPopup/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = -1
columns = 7

[node name="ConfirmationPopup" type="PanelContainer" parent="PopupLayer"]
visible = false
offset_left = 329.0
offset_top = 317.0
offset_right = 773.0
offset_bottom = 404.0
theme = ExtResource("6_tcjrq")

[node name="VBoxContainer" type="VBoxContainer" parent="PopupLayer/ConfirmationPopup"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="PopupLayer/ConfirmationPopup/VBoxContainer"]
layout_mode = 2
text = "Updating the family will start a new trip. 
Are you sure you want to continue?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PopupLayer/ConfirmationPopup/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ContinueButton" type="Button" parent="PopupLayer/ConfirmationPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="ReturnButton" type="Button" parent="PopupLayer/ConfirmationPopup/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Return"

[node name="PlacePinSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("12_rvs2r")

[node name="ButtonSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_5ay1a")

[node name="SuccessSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("13_tqxxy")

[connection signal="pressed" from="MenuButtons/HBoxContainer/LeftColumn/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/LeftColumn/FamilyButton" to="." method="_on_family_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/LeftColumn/InstructionsButton" to="." method="_on_instructions_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/LeftColumn/NewTripButton" to="." method="_on_new_trip_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/RightColumn/ClearAllButton" to="." method="_on_clear_all_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/RightColumn/ReverseButton" to="." method="_on_reverse_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/RightColumn/LoadMaxPathButton" to="." method="_on_load_max_path_button_pressed"]
[connection signal="pressed" from="MenuButtons/HBoxContainer/RightColumn/InfoButton" to="." method="_on_info_button_pressed"]
[connection signal="toggled" from="GridToggleButton" to="." method="_on_grid_toggle_button_toggled"]
[connection signal="toggled" from="SoundToggleButton" to="." method="_on_sound_toggle_toggled"]
[connection signal="pressed" from="PopupLayer/InfoPopup/VBoxContainer/HBoxContainer/CloseButton" to="." method="_on_close_button_pressed"]
[connection signal="pressed" from="PopupLayer/ConfirmationPopup/VBoxContainer/HBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
